<resources>
    <string name="app_name">SampleApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="forgot">FORGOT</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Sign_in">Sign in</string>
    <string name="desc">image</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="Login_heading">Hey ,What would\nyou like to learn\ntoday?</string>
    <string name="courses">19 courses</string>
    <string name="Design_Thinking">Design Thinking</string>
    <string name="heading">Find your matches\ncourses</string>
    <string name="courses_available">10 courses available</string>
    <string name="Design_basics">Design basics</string>
    <string name="Learn_Design_basics">Learn Design basics</string>
    <string name="Popular_Courses">Popular Courses</string>
    <string name="this_is_footer">This is footer</string>
    <string name="loading">Loading...</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city1">City :</string>
    <string name="image">image</string>
    <string-array name="places">
        <item>Bangalore</item>
        <item>Mysore</item>
        <item>Hassan</item>
        <item>Raichur</item>
    </string-array>
</resources>