<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="registerViewModel"
            type="com.example.sampleapp.viewModel.RegisterViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="202dp"
        android:layout_height="204dp"
        android:contentDescription="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Sign_in_Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:paddingBottom="20dp"
        app:drawableLeftCompat="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Sign_in_Headline"
        style="@style/Register_textview_Header_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_in_Toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Register_textview_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_in_Headline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            style="@style/Register_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@={registerViewModel.fullName}"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:hint="@string/full_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Register_textview_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_textview_Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            style="@style/Register_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={registerViewModel.email}"
            android:drawableStart="@drawable/baseline_mail_outline_24"
            android:hint="@string/EMAIL"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Register_textview_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_textview_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            style="@style/Register_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={registerViewModel.password}"
            android:drawableStart="@drawable/baseline_password_24"
            android:hint="@string/PASSWORD"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Register_textview_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register_textview_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfirmPassword"
            style="@style/Register_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={registerViewModel.confirmPassword}"
            android:drawableStart="@drawable/baseline_password_24"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Register_button"
        style="@style/TextView_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="end"
        android:text="@string/sign_in"
        app:drawableEndCompat="@drawable/baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="@+id/Register_textview_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/Register_textview_confirm_password"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Sign_in_footer1"
        style="@style/TextView_Footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_footer2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_in_footer2"
        style="@style/Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Sign_in_footer1"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>