<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.sampleapp.viewModel.ItemViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/desc"
                app:imageResource="@{model.image}"
                app:layout_constraintEnd_toEndOf="@+id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toTopOf="@id/constraint"
                tools:src="@drawable/img" />

            <TextView
                android:id="@+id/name"
                style="@style/item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
               android:layout_marginStart="20dp"
                android:text="@{model.item1}"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/img"
                tools:text="@string/Design_Thinking" />

            <TextView
                android:id="@+id/number"
                style="@style/item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:layout_marginStart="20dp"
                android:text="@{model.item2}"
                app:layout_constraintBottom_toBottomOf="@id/constraint"
                app:layout_constraintStart_toStartOf="@id/constraint"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="@string/courses" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>