<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textView2"
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="60dp"
                android:paddingEnd="0dp"
                android:text="@string/heading"
                app:layout_scrollFlags="scroll|enterAlways" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/anime2"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="20dp"
            android:text="@string/courses_available"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_scrollFlags="scroll|enterAlways" />


        <FrameLayout
            android:id="@+id/child_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/heading"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_scrollFlags="scroll|enterAlways"/>
        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textColor="@color/black"
            android:text="@string/Popular_Courses"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:paddingTop="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/slide" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>